                                      MPlayer Core CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 25-06-2005 fixed: made mplayer set interlaced flag on mpeg2 video when decoding using libmpeg2
  - 25-06-2005 updated: ffmpeg to latest cvs as of now
  - 25-06-2005 added: [ 1236234 ] mplayer_GetAudioInfo returns wrong audio bitrate
  - 14-06-2005 added: readded a couple of other filters and fixed playback with noise filter
  - 14-06-2005 fixed: readded volume filter, was actually in use
  - 10-06-2005 fixed: playback using mplayer.dll without libavformat would never start, load of dll failed.
  - 10-06-2005 fixed: made libavformat conditional, just run configurexbmc --disable-libavformat
  - 10-06-2005 fixed: chipmunk playback caused by removal of dummy audio filter
  - 08-06-2005 updated: fixed two linking errors so that mplayer.dll can be compiled without the last of libavcodecs encoders.
  - 08-06-2005 updated: system headers to use with mingw 3.4.4 (USE GCC 3.4.4 OR HIGHER 3.4.x SERIES FROM NOW)
  - 08-06-2005 removed: unneeded video/audio filters
  - 08-06-2005 moved: xbmc hookup for audio into ao_directx instead of win32
  - 05-06-2005 fixed: player was resetting audio on each seak during ff/rw.. caused slowdowns
  - 22-05-2005 fixed: too fast playback immidiatly after resume from pause when autosync enabled.
  - 18-05-2005 fixed: subtitles didn't display in dvdimages if ttf subtitle fonts where selected in xbmc
  - 09-04-2005 new: support for returning amount of filled buffer to xbmc, and detect when buffer runs empty.
  - 09-04-2005 new: support for sending slave commands from xbmc to mplayer.
  - 09-04-2005 changed: made sure seeking didn't display progressbar of osd was turned of.